--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
   ],
   "type": "module",
   "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "tsc -w",
+    "dev": "vitest",
     "build": "tsc",
-    "ci": "npm run build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "ci": "npm run build && npm run check-format && npm run check-exports && npm run test",
+    "test": "vitest run",
+    "check-format": "prettier --check .",
+    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.16.4",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.2"
   }
 }
