--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "ci": "npm run build && npm run check-format && npm run check-exports && npm run test",
     "test": "vitest run",
     "check-format": "prettier --check .",
-    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm"
+    "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
+    "local-release": "changeset version && changeset publish",
+    "prepublishOnly": "npm run ci"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
+    "@changesets/cli": "^2.27.9",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "vitest": "^2.1.2"
