--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test": "vitest run",
     "check-format": "prettier --check .",
     "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
+    "gha-release": "npm run build && changeset version && changeset publish",
     "local-release": "changeset version && changeset publish",
     "prepublishOnly": "npm run ci"
   },
