--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+      
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+  packages: write
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
