--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,12 +5,6 @@ on:
     branches:
       - main
       
-permissions:
-  contents: write
-  issues: write
-  pull-requests: write
-  packages: write
-
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
@@ -33,8 +27,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
-          publish: npm run gha-release
+          publish: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
