--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@isimmons/tt-package-demo",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "description": "A demo package for Total TypeScript 'How to create an npm package'",
   "keywords": [
     "demo",
@@ -29,7 +29,7 @@
     "test": "vitest run",
     "check-format": "prettier --check .",
     "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
-    "gha-release": "npm run build && changeset publish",
+    "release": "npm run build && changeset publish",
     "local-release": "changeset version && changeset publish",
     "prepublishOnly": "npm run ci"
   },
